# HuffCompressor

./: .gitattributes  BugList.txt  CMakeLists.txt  HuffCompressor  README.txt  build.sh  core  main.cpp  test.sh  test.txt
include/: BitBufferReader.h  BitBufferWriter.h  FileHelper.h  HuffFile.h  HuffTree.h  HuffZipper.h
src/: BitBufferReader.cpp  BitBufferWriter.cpp  FileHelper.cpp  FileHelper_unittest.cpp  HuffZipper.cpp
testFile/: bigFile.txt  spec11  spec12  spec13  spec14  spec15  spec16  spec17  spec18  spec21  spec22
utils/: CMakeLists.txt  TimeCost.cpp  TimeCost.h
